<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipe_display_layout">

    <data>
        <variable
            name="viewModel"
            type="com.flavorplus.support.landing.SupportViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_new_ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/new_ticket"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_new_ticket"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/et_new_ticket_title_layout"
                app:counterEnabled="true"
                app:counterMaxLength="50">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_new_ticket_title"
                    android:hint="@string/subject"
                    android:importantForAutofill="no"
                    android:gravity="top|start"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/et_new_ticket_title_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/et_new_ticket_message_layout"
                app:counterEnabled="true"
                app:counterMaxLength="1000">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_new_ticket_message"
                    android:hint="@string/message"
                    android:inputType="textMultiLine"
                    android:minHeight="100dp"
                    android:importantForAutofill="no"
                    android:gravity="top|start"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_new_ticket_message_layout"
                android:text="@string/send"
                android:id="@+id/bt_send"/>


            <TextView
                android:id="@+id/tv_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/history"
                app:layout_constraintTop_toBottomOf="@id/bt_send"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_tickets"
                app:layout_constraintTop_toBottomOf="@id/tv_history"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>